# CPP_SE_2025

./: README.md
labwork1-sandrocaster16/: README.md  main.cpp
labwork2-sandrocaster16/: .gitignore  README.md
labwork2-sandrocaster16/lib/: number.cpp  number.h
labwork2-sandrocaster16/tests/: number_test.cpp
labwork3-sandrocaster16/: .gitignore  CMakeLists.txt
labwork3-sandrocaster16/lib/: files_worker.h  game.h  parser.h  support_functions.cpp  support_functions.h
labwork4-sandrocaster16/lib/: ArgParser.cpp  ArgParser.h
labwork4-sandrocaster16/tests/: argparser_test.cpp
labwork5-sandrocaster16/: .gitignore  CMakeLists.txt
labwork5-sandrocaster16/lib/: BattleShip.cpp  BattleShip.hpp  CMakeLists.txt
labwork6-sandrocaster16/: .gitignore  CMakeLists.txt
labwork6-sandrocaster16/lib/: CMakeLists.txt  Traveler.cpp  Traveler.hpp  alphabet.tsv  codes.tsv
labwork7-sandrocaster16/: .gitignore  CMakeLists.txt
labwork7-sandrocaster16/lib/: CMakeLists.txt  iterator.h  node.h  unrolled_list.cpp  unrolled_list.h
labwork7-sandrocaster16/tests/: CMakeLists.txt
labwork8-sandrocaster16/: .gitignore  CMakeLists.txt
labwork8-sandrocaster16/lib/: CMakeLists.txt  processing.h
labwork8-sandrocaster16/tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
labwork9-sandrocaster16/: .gitignore
labwork9-sandrocaster16/lib/: Any.hpp  CMakeLists.txt  Function.hpp  GraphLogic.hpp  Invoke.hpp  Task.hpp  Tuple.hpp  scheduler.h
labwork9-sandrocaster16/tests/: CMakeLists.txt  tests.cpp
(+37 files in other folders)
